@@ -1,5 +1,13 @@
 2010-02-23  Benjamin Kosnik  <bkoz@redhat.com>
 
+	* doc/xml/manual/concurrency.xml: Move...
+	* doc/xml/manual/concurrency_extensions.xml: ...here.
+	* doc/xml/manual/extensions.xml: Adjust.
+	* doc/Makefile.am: Adjust.
+	* doc/Makefile.in: Regenerate.
+
+2010-02-23  Benjamin Kosnik  <bkoz@redhat.com>
+
 	* include/bits/random.h: Doxygen group markup fixes.
 
 2010-02-23  Paolo Carlini  <paolo.carlini@oracle.com>
